--- a/app/index.html
+++ b/app/index.html
@@ -348,29 +348,51 @@
               </div> <!-- cd-timeline-block -->
             </div>
 
-            <div class="cd-timeline-wrapper interval lt">
+            <div class="cd-timeline-wrapper">
               <div class="cd-timeline-block">
                 <div class="cd-timeline-circle">
                 </div>
                 <div class="cd-timeline-time">
-                  09h00
+                  10h00
                 </div>
                 <div class="cd-timeline-img">
-                  <img src="images/icon-timeline-yellow.png" alt="">
+                  <img src="images/trash/speaker.png" alt="">
                 </div> <!-- cd-timeline-img -->
 
                 <div class="cd-timeline-content">
-                  LIGHTNING TALKS
+                  <h2>Darth Vader</h2>
+                  <p>UX Companion: um glossário para os jargões de UX Design</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
+
+
+
+            <div class="cd-timeline-wrapper">
+              <div class="cd-timeline-block">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  11h00
+                </div>
+                <div class="cd-timeline-img">
+                  <img src="images/trash/schedule-marcio.png" alt="">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                  <h2>Marcio Trindade</h2>
+                  <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>
+
 
             <div class="cd-timeline-wrapper interval">
               <div class="cd-timeline-block">
                 <div class="cd-timeline-circle">
                 </div>
                 <div class="cd-timeline-time">
-                  09h00
+                  12h00
                 </div>
                 <div class="cd-timeline-img">
                   <img src="images/icon-timeline-food.png" alt="">
@@ -382,13 +404,88 @@
               </div> <!-- cd-timeline-block -->
             </div>
 
+<!-- ########### Break ############ -->
+
+            <div class="cd-timeline-wrapper interval lt">
+              <div class="cd-timeline-block">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  13h00
+                </div>
+                <div class="cd-timeline-img">
+                  <img src="images/icon-timeline-yellow.png" alt="">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                  LIGHTNING TALKS
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>   
+
 
             <div class="cd-timeline-wrapper">
               <div class="cd-timeline-block">
                 <div class="cd-timeline-circle">
                 </div>
                 <div class="cd-timeline-time">
-                  09h00
+                  14h00
+                </div>
+                <div class="cd-timeline-img">
+                  <img src="images/trash/schedule-minetto.png" alt="">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                  <h2>Elton Minetto</h2>
+                  <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>
+
+            <div class="cd-timeline-wrapper">
+              <div class="cd-timeline-block">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  15h00
+                </div>
+                <div class="cd-timeline-img">
+                  <img src="images/trash/speaker.png" alt="">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                  <h2>Luke Skywalker</h2>
+                  <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>
+
+
+
+            <div class="cd-timeline-wrapper interval">
+              <div class="cd-timeline-block">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  16h00
+                </div>
+                <div class="cd-timeline-img">
+                  <img src="images/icon-timeline-food.png" alt="">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                  Intervalo
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>
+
+
+            <div class="cd-timeline-wrapper">
+              <div class="cd-timeline-block">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  16h30
                 </div>
                 <div class="cd-timeline-img">
                   <img src="images/trash/speaker.png" alt="">
@@ -406,32 +503,14 @@
                 <div class="cd-timeline-circle">
                 </div>
                 <div class="cd-timeline-time">
-                  09h00
+                  17h30
                 </div>
                 <div class="cd-timeline-img">
-                  <img src="images/trash/speaker.png" alt="">
+                  <img src="images/trash/schedule-fabricio.png" alt="">
                 </div> <!-- cd-timeline-img -->
 
                 <div class="cd-timeline-content">
-                  <h2>Luke Skywalker</h2>
-                  <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
-                </div> <!-- cd-timeline-content -->
-              </div> <!-- cd-timeline-block -->
-            </div>
-
-            <div class="cd-timeline-wrapper">
-              <div class="cd-timeline-block">
-                <div class="cd-timeline-circle">
-                </div>
-                <div class="cd-timeline-time">
-                  09h00
-                </div>
-                <div class="cd-timeline-img">
-                  <img src="images/trash/speaker.png" alt="">
-                </div> <!-- cd-timeline-img -->
-
-                <div class="cd-timeline-content">
-                  <h2>Luke Skywalker</h2>
+                  <h2>Fabrício Teixeira</h2>
                   <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
@@ -442,7 +521,7 @@
                 <div class="cd-timeline-circle">
                 </div>
                 <div class="cd-timeline-time">
-                  08h00
+                  18h30
                 </div>
                 <div class="cd-timeline-img">
                   <!-- <img src="images/trash/speaker.png" alt=""> -->
@@ -466,7 +545,7 @@
               <h2 class="section-title">Lightning Talk</h2>
               <div class="lt-description">
                 Você pode participar do Alagoas Dev Day com um Lightning Talk de 20 minutos.
-Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos em 03 categorias (front-end, back-end e design) Submeta sua ideia e fique na torcida.
+                Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos em 03 categorias (front-end, back-end e design) Submeta sua ideia e fique na torcida.
               </div>
               <ul class="lt-list">
                 <li>
@@ -511,6 +590,7 @@ Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos
               </div>
             </div>
           </div>
+
           <div class="moon-overlay-bg">
             <div class="earth"></div>
             <div class="rocket"></div>
@@ -625,9 +705,6 @@ Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos
 
           <div class="sponsor-category master-category">
             <h2 class="title">Oferecimento</h2>
-            <a href="">
-              <img src="images/logo-id5.jpg" alt="">
-            </a>
             <a href="">
               <img src="images/logo-id5.jpg" alt="">
             </a>
