Fiz sizes timeline

--- a/app/index.html
+++ b/app/index.html
@@ -343,7 +343,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Darth Vader</h2>
-                  <p>UX Companion: um glossário para os jargões de UX Design</p>
+                  <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
@@ -361,7 +361,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Darth Vader</h2>
-                  <p>UX Companion: um glossário para os jargões de UX Design</p>
+                  <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
@@ -381,7 +381,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Marcio Trindade</h2>
-                  <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
+                  <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
@@ -437,7 +437,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Elton Minetto</h2>
-                  <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
+                  <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
@@ -455,7 +455,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Luke Skywalker</h2>
-                  <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
+                  <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
@@ -493,7 +493,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Luke Skywalker</h2>
-                  <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
+                  <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
@@ -511,7 +511,7 @@
 
                 <div class="cd-timeline-content">
                   <h2>Fabrício Teixeira</h2>
-                  <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
+                  <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
             </div>
