add effects, and speakers images

--- a/app/index.html
+++ b/app/index.html
@@ -337,9 +337,12 @@
                 <div class="cd-timeline-time">
                   09h00
                 </div>
-                <div class="cd-timeline-img">
-                  <img src="images/trash/speaker.png" alt="">
-                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-img schedule-speaker">
+                  <div class="schedule-speaker-img">
+                    <img src="images/trash/darth-vader.png" alt="">
+                  </div>
+                </div>
 
                 <div class="cd-timeline-content">
                   <h2>Darth Vader</h2>
@@ -355,9 +358,12 @@
                 <div class="cd-timeline-time">
                   10h00
                 </div>
-                <div class="cd-timeline-img">
-                  <img src="images/trash/speaker.png" alt="">
-                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-img schedule-speaker">
+                  <div class="schedule-speaker-img">
+                    <img src="images/trash/darth-vader.png" alt="">
+                  </div>
+                </div>
 
                 <div class="cd-timeline-content">
                   <h2>Darth Vader</h2>
@@ -375,9 +381,13 @@
                 <div class="cd-timeline-time">
                   11h00
                 </div>
-                <div class="cd-timeline-img">
-                  <img src="images/trash/schedule-marcio.png" alt="">
-                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-img schedule-speaker">
+                  <div class="schedule-speaker-img">
+                    <img src="images/trash/marcio-trindade.jpg" alt="">
+                  </div>
+                </div>
+
 
                 <div class="cd-timeline-content">
                   <h2>Marcio Trindade</h2>
@@ -431,9 +441,12 @@
                 <div class="cd-timeline-time">
                   14h00
                 </div>
-                <div class="cd-timeline-img">
-                  <img src="images/trash/schedule-minetto.png" alt="">
-                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-img schedule-speaker">
+                  <div class="schedule-speaker-img">
+                    <img src="images/trash/elton-minetto.jpg" alt="">
+                  </div>
+                </div>
 
                 <div class="cd-timeline-content">
                   <h2>Elton Minetto</h2>
@@ -449,9 +462,13 @@
                 <div class="cd-timeline-time">
                   15h00
                 </div>
-                <div class="cd-timeline-img">
-                  <img src="images/trash/speaker.png" alt="">
-                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-img schedule-speaker">
+                  <div class="schedule-speaker-img">
+                    <img src="images/trash/darth-vader.png" alt="">
+                  </div>
+                </div>
+
 
                 <div class="cd-timeline-content">
                   <h2>Luke Skywalker</h2>
@@ -487,9 +504,12 @@
                 <div class="cd-timeline-time">
                   16h30
                 </div>
-                <div class="cd-timeline-img">
-                  <img src="images/trash/speaker.png" alt="">
-                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-img schedule-speaker">
+                  <div class="schedule-speaker-img">
+                    <img src="images/trash/darth-vader.png" alt="">
+                  </div>
+                </div>
 
                 <div class="cd-timeline-content">
                   <h2>Luke Skywalker</h2>
@@ -505,9 +525,12 @@
                 <div class="cd-timeline-time">
                   17h30
                 </div>
-                <div class="cd-timeline-img">
-                  <img src="images/trash/schedule-fabricio.png" alt="">
-                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-img schedule-speaker">
+                  <div class="schedule-speaker-img">
+                    <img src="images/trash/fabricio-teixeira.jpg" alt="">
+                  </div>
+                </div>
 
                 <div class="cd-timeline-content">
                   <h2>Fabrício Teixeira</h2>
@@ -547,44 +570,51 @@
                 Você pode participar do Alagoas Dev Day com um Lightning Talk de 20 minutos.
                 Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos em 03 categorias (front-end, back-end e design) Submeta sua ideia e fique na torcida.
               </div>
+
               <ul class="lt-list">
+
                 <li>
                   <div class="lt-picture">
                     <img src="images/trash/lt-speaker.png" alt="">
                   </div>
-                  <div class="label">
-                      <a href="#">Envie sua proposta</a>
-                  </div>
                   <h3>Lightning Talk - Front-end</h3>
                   <p>
                     Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
                   </p>
+                  <div class="btn-lt">
+                      <a href="#">Envie sua proposta</a>
+                  </div>
                 </li>
+
                 <li>
                   <div class="lt-picture">
                     <img src="images/trash/lt-speaker.png" alt="">
                   </div>
-                  <div class="label">
-                      <a href="#">Envie sua proposta</a>
-                  </div>
                   <h3>Lightning Talk - Front-end</h3>
                   <p>
-                    Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                    Eita Mainha!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
                   </p>
+                  <div class="btn-lt">
+                      <a href="#">Envie sua proposta</a>
+                  </div>
                 </li>
-                <li class="confirmed">
+
+                <li class=""> <!-- Add class -> confirmed -->
                   <div class="lt-picture">
                     <img src="images/trash/lt-speaker.png" alt="">
                   </div>
-                  <div class="label">
-                    lightning talk confirmado
-                  </div>
                   <h3>Lightning Talk - Front-end</h3>
                   <p>
                     Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
                   </p>
+                  <div class="btn-lt">
+                    <!-- lightning talk confirmado --> 
+                    <a href="#">Envie sua proposta</a>
+                  </div>
                 </li>
+
               </ul>
+
               <div class="lt-obs">
                 *Custos referentes a deslocamento e hospedagens não são de responsabilidade da comissão organizadora do evento.
               </div>
@@ -881,7 +911,6 @@
 
         </div>
         <div class="top-cloud"></div>
-
 
       </section>
     </div>
