Adjustment code index.html and scss.

--- a/app/index.html
+++ b/app/index.html
@@ -75,25 +75,26 @@
     <div id="container" ng-controller="MainCtrl">
 
       <section class="header-ovini" id="home">
-        <canvas id="pixie"></canvas>
-        <div class="cloud-wrapper"></div>
-        <div class="ovini-animation">
-          <div class="ovini">
-            <div class="light"></div>
+          <canvas id="pixie"></canvas>
+          <div class="cloud-wrapper"></div>
+          <div class="ovini-animation">
+              <div class="ovini">
+                  <div class="light"></div>
+              </div>
+              <img src="images/add-logo.png" alt="" class="add-logo">
+              <div class="event-date-local">
+                  <span class="date">18.Abril</span>
+                  <br> Colégio Contato Maceió
+              </div>
+              <a href="#" class="register-header">
+                  <img src="images/register-header.png" alt="">
+              </a>
           </div>
-          <img src="images/add-logo.png" alt="" class="add-logo">
-          <div class="event-date-local">
-            <span class="date">18.Abril</span> <br>
-            Colégio Contato Maceió
+          <div class="rockets">
+              <img src="images/rockets.png" alt="">
           </div>
-          <a href="#" class="register-header">
-            <img src="images/register-header.png" alt="">
-          </a>
-        </div>
-        <div class="rockets">
-          <img src="images/rockets.png" alt="">
-        </div>
       </section>
+
 
       <section class="for-whom" id="for-whom" >
         <div class="for-whon-wrapper">
@@ -101,41 +102,42 @@
 
           <ul class="for-whom-list">
             <li>
-              <span class="persona">Front-end</span>
-              <img src="images/persona-frontend.png" alt="">
-              <p class="description">
-                Padronização, web components, ferramentas e código, muito código.
-              </p>
+                <span class="persona">Front-end</span>
+                <img src="images/persona-frontend.png" alt="">
+                <p class="description">
+                    Padronização, web components, ferramentas e código, muito código.
+                </p>
             </li>
             <li>
-              <span class="persona">Back-end</span>
-              <img src="images/persona-backend.png" alt="">
-              <p class="description">
-                Padronização, web components, ferramentas e código, muito código.
-              </p>
+                <span class="persona">Back-end</span>
+                <img src="images/persona-backend.png" alt="">
+                <p class="description">
+                    Padronização, web components, ferramentas e código, muito código.
+                </p>
             </li>
             <li>
-              <span class="persona">Designers</span>
-              <img src="images/persona-designer.png" alt="">
-              <p class="description">
-                Padronização, web components, ferramentas e código, muito código.
-              </p>
+                <span class="persona">Designers</span>
+                <img src="images/persona-designer.png" alt="">
+                <p class="description">
+                    Padronização, web components, ferramentas e código, muito código.
+                </p>
             </li>
             <li>
-              <span class="persona">Empresários</span>
-              <img src="images/persona-businessman.png" alt="">
-              <p class="description">
-                Padronização, web components, ferramentas e código, muito código.
-              </p>
+                <span class="persona">Empresários</span>
+                <img src="images/persona-businessman.png" alt="">
+                <p class="description">
+                    Padronização, web components, ferramentas e código, muito código.
+                </p>
             </li>
             <li>
-              <span class="persona">Criativos</span>
-              <img src="images/persona-creative.png" alt="">
-              <p class="description">
-                Padronização, web components, ferramentas e código, muito código.
-              </p>
+                <span class="persona">Criativos</span>
+                <img src="images/persona-creative.png" alt="">
+                <p class="description">
+                    Padronização, web components, ferramentas e código, muito código.
+                </p>
             </li>
           </ul>
+
         </div>
 
         <div class="cloud"></div>
@@ -148,32 +150,37 @@
           <ul class="speaker-list">
 
             <li class="speaker-item">
+
               <div class="speaker-profile-picture">
                 <div class="hover-profile-picture" style="background-image: url('images/trash/rga.png');">
                 </div>
                 <img src="images/trash/fabricio-teixeira.jpg" alt="">
               </div>
+
               <div class="speaker-profile-informations">
-                <span class="speaker-name">Fabrício Teixeira</span>
-                <span class="speaker-job">UX na R/GA - New York</span>
-                <span class="speaker-description">
-                  Publicitário e mestre em Interactive Media. Experience Design Director na R/GA e coautor de um dos maiores blogs sobre UX e IA no Brasil. 
-                </span>
-                <ul class="social-links">
-                  <li class="twitter">
-                    <a href="https://twitter.com/fabriciot" target="_blank">Twitter</a>
-                  </li>
-                  <li class="facebook">
-                    <a href="https://www.facebook.com/fabricioteixeira" target="_blank">Facebook</a>
-                  </li>
-                  <li class="linkedin">
-                    <a href="https://www.linkedin.com/in/fabricioteixeira/pt" target="_blank">LinkedIn</a>
-                  </li>
-                  <li class="keynote">
-                    <a href="#" target="_blank">Keynote</a>
-                  </li>
-                </ul>
+                  <span class="speaker-name">Fabrício Teixeira</span>
+                  <span class="speaker-job">UX na R/GA - New York</span>
+                  <span class="speaker-description">
+                    Publicitário e mestre em Interactive Media. Experience Design Director na R/GA e coautor de um dos maiores blogs sobre UX e IA no Brasil. 
+                  </span>
+
+                  <ul class="social-links">
+                      <li class="twitter">
+                          <a href="https://twitter.com/fabriciot" target="_blank">Twitter</a>
+                      </li>
+                      <li class="facebook">
+                          <a href="https://www.facebook.com/fabricioteixeira" target="_blank">Facebook</a>
+                      </li>
+                      <li class="linkedin">
+                          <a href="https://www.linkedin.com/in/fabricioteixeira/pt" target="_blank">LinkedIn</a>
+                      </li>
+                      <li class="keynote">
+                          <a href="#" target="_blank">Keynote</a>
+                      </li>
+                  </ul>
+
               </div>
+
             </li>
 
             <li class="speaker-item">
