--- a/app/index.html
+++ b/app/index.html
@@ -969,6 +969,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
 
+    <script src="scripts/starscanvas.js"></script>
     <script src="scripts/playground.js"></script>
     <!-- endbuild -->
 
