--- a/app/index.html
+++ b/app/index.html
@@ -748,7 +748,7 @@
             </a>
           </div>
 
-
+<!--
           <div class="sponsor-category">
             <h2 class="title">Patrocínio Ouro</h2>
             <a href="">
@@ -809,7 +809,7 @@
               <img src="images/logo-globo.jpg" alt="">
             </a>
           </div>
-        </div>
+        </div> -->
 
       </section>
 
