--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,7 @@
                   <span class="date">18.Abril</span>
                   <br> Colégio Contato Maceió
               </div>
-              <a href="#" class="register-header">
+              <a href="http://www.eventick.com.br/add-2015" class="register-header">
                   <img src="images/register-header.png" alt="">
               </a>
           </div>
@@ -732,7 +732,7 @@
               <span class="valid">Válido até 25/mar</span>
             </li>
           </ul>
-          <a href="#" class="register-now">Inscreva-se agora</a>
+          <a href="http://www.eventick.com.br/add-2015" class="register-now">Inscreva-se agora</a>
         </div>
       </section>
 
