--- a/app/index.html
+++ b/app/index.html
@@ -715,21 +715,21 @@
                 <span class="ending">Acabando!</span>
               </div>
               <span class="price">R$45</span> <br>
-              <span class="valid">Válido até 25/fev</span>
+              <span class="valid">Válido até 28/fev</span>
             </li>
             <li class="disabled">
               <div class="register-header-box">
                 Lote 02
               </div>
-              <span class="price">R$55</span> <br>
-              <span class="valid">Válido até 25/mar</span>
+              <span class="price">R$60</span> <br>
+              <span class="valid">Válido até 31/mar</span>
             </li>
             <li class="disabled">
               <div class="register-header-box">
                 Lote 03
               </div>
-              <span class="price">R$65</span> <br>
-              <span class="valid">Válido até 25/mar</span>
+              <span class="price">R$75</span> <br>
+              <span class="valid">Válido até 16/abr</span>
             </li>
           </ul>
           <a href="http://www.eventick.com.br/add-2015" class="register-now">Inscreva-se agora</a>
