--- a/app/index.html
+++ b/app/index.html
@@ -106,21 +106,21 @@
                 <span class="persona">Front-end</span>
                 <img src="images/persona-frontend.png" alt="">
                 <p class="description">
-                    Padronização, web components, ferramentas e código, muito código.
+                    Padronização, web components, ferramentas, JavaScript, angular e mais.
                 </p>
             </li>
             <li>
                 <span class="persona">Back-end</span>
                 <img src="images/persona-backend.png" alt="">
                 <p class="description">
-                    Padronização, web components, ferramentas e código, muito código.
+                    Ruby, php, Java, banco de dados e mais.
                 </p>
             </li>
             <li>
                 <span class="persona">Designers</span>
                 <img src="images/persona-designer.png" alt="">
                 <p class="description">
-                    Padronização, web components, ferramentas e código, muito código.
+                    Usabilidade, experiência do usuário, ui kits e mais.
                 </p>
             </li>
             <li>
@@ -234,6 +234,35 @@
                   </li>
                   <li class="linkedin">
                     <a href="https://www.linkedin.com/in/marciotrindade" target="_blank">LinkedIn</a>
+                  </li>
+                  <li class="keynote">
+                    <a href="#" target="_blank">Keynote</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+
+            <li class="speaker-item">
+              <div class="speaker-profile-picture">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/locaweb.png');">
+                </div>
+                <img src="images/trash/luis-cipriani.jpg" alt="">
+              </div>
+              <div class="speaker-profile-informations">
+                <span class="speaker-name">Luis Cipriani</span>
+                <span class="speaker-job">Developer Advocate, Twitter</span>
+                <span class="speaker-description">
+                  Computer Scientist, Developer Advocate @ Twitter, Silly Walker
+                </span>
+                <ul class="social-links">
+                  <li class="twitter">
+                    <a href="https://twitter.com/lfcipriani" target="_blank">Twitter</a>
+                  </li>
+                  <li class="facebook">
+                    <a href="https://www.facebook.com/lfcipriani" target="_blank">Facebook</a>
+                  </li>
+                  <li class="linkedin">
+                    <a href="https://www.linkedin.com/in/luiscipriani/pt" target="_blank">LinkedIn</a>
                   </li>
                   <li class="keynote">
                     <a href="#" target="_blank">Keynote</a>
