Add twitter logo

--- a/app/index.html
+++ b/app/index.html
@@ -244,7 +244,7 @@
 
             <li class="speaker-item">
               <div class="speaker-profile-picture">
-                <div class="hover-profile-picture" style="background-image: url('images/trash/locaweb.png');">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/twitter.png');">
                 </div>
                 <img src="images/trash/luis-cipriani.jpg" alt="">
               </div>
@@ -808,37 +808,37 @@
             </a>
           </div>
 
-        </div>
+        </div> -->
 
         <div class="partners-wrapper">
           <div class="partners">
             <h2 class="title">Conteúdo</h2>
             <a href="">
-              <img src="images/logo-globo.jpg" alt="">
+              <img src="images/trash/sponsors/abound.png" alt="">
             </a>
           </div>
 
           <div class="partners">
             <h2 class="title">Inscrições</h2>
             <a href="">
-              <img src="images/logo-globo.jpg" alt="">
+              <img src="images/trash/sponsors/eventick.png" alt="">
             </a>
           </div>
 
           <div class="partners">
             <h2 class="title">Filme</h2>
             <a href="">
-              <img src="images/logo-globo.jpg" alt="">
+              <img src="images/trash/sponsors/tche.png" alt="">
             </a>
           </div>
 
           <div class="partners">
             <h2 class="title">Social Media</h2>
             <a href="">
-              <img src="images/logo-globo.jpg" alt="">
+              <img src="images/trash/sponsors/kuka.png" alt="">
             </a>
           </div>
-        </div> -->
+        </div> 
 
       </section>
 
