Remove Fabrício Teixeira

--- a/app/index.html
+++ b/app/index.html
@@ -150,7 +150,7 @@
 
           <ul class="speaker-list">
 
-            <li class="speaker-item">
+<!--             <li class="speaker-item">
 
               <div class="speaker-profile-picture">
                 <div class="hover-profile-picture" style="background-image: url('images/trash/rga.png');">
@@ -182,7 +182,7 @@
 
               </div>
 
-            </li>
+            </li> -->
 
             <li class="speaker-item">
               <div class="speaker-profile-picture">
