Add Luis Cipriani - TimeLine

--- a/app/index.html
+++ b/app/index.html
@@ -565,12 +565,12 @@
 
                 <div class="cd-timeline-img schedule-speaker">
                   <div class="schedule-speaker-img">
-                    <img src="images/trash/fabricio-teixeira.jpg" alt="">
+                    <img src="images/trash/luis-cipriani.jpg" alt="">
                   </div>
                 </div>
 
                 <div class="cd-timeline-content">
-                  <h2>Fabrício Teixeira</h2>
+                  <h2>Luis Cipriani</h2>
                   <p>Em breve</p>
                 </div> <!-- cd-timeline-content -->
               </div> <!-- cd-timeline-block -->
