--- a/app/index.html
+++ b/app/index.html
@@ -625,9 +625,9 @@
 
                 <li>
                   <div class="lt-picture">
-                    <img src="images/trash/lt-speaker.png" alt="">
+                    <img src="images/persona-backend.png" alt="">
                   </div>
-                  <h3>Lightning Talk - Front-end</h3>
+                  <h3>Lightning Talk - Back-end</h3>
                   <p>
                     Eita Mainha!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
                   </p>
@@ -638,9 +638,9 @@
 
                 <li class=""> <!-- Add class -> confirmed -->
                   <div class="lt-picture">
-                    <img src="images/trash/lt-speaker.png" alt="">
+                    <img src="images/persona-designer.png" alt="">
                   </div>
-                  <h3>Lightning Talk - Front-end</h3>
+                  <h3>Lightning Talk - Design</h3>
                   <p>
                     Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
                   </p>
