--- a/app/index.html
+++ b/app/index.html
@@ -798,12 +798,21 @@
         <div class="sponsors-wrapper">
           <h2 class="section-title">Quem faz acontecer</h2>
 
-          <div class="sponsor-category master-category">
+
+          <div class="sponsor-category category-{{category.name.toLowerCase()}}" ng-repeat="category in sponsorResults.sponsor_categories">
+            <h2 class="title">{{category.name}}</h2>
+            <a href="{{sponsor.url}}" ng-repeat="sponsor in category.sponsors">
+              <img src="{{sponsor.images.original}}" alt="{{sponsor.name}}">
+            </a>
+          </div>
+        </div>
+
+          <!-- <div class="sponsor-category master-category">
             <h2 class="title">Oferecimento</h2>
             <a href="">
               <img src="images/logo-id5.jpg" alt="">
             </a>
-          </div>
+          </div> -->
 
 <!--
           <div class="sponsor-category">
