Change class master-category

--- a/app/index.html
+++ b/app/index.html
@@ -252,7 +252,7 @@
                 <span class="speaker-name">Luis Cipriani</span>
                 <span class="speaker-job">Developer Advocate, Twitter</span>
                 <span class="speaker-description">
-                  Computer Scientist, Developer Advocate @ Twitter, Silly Walker
+                  Developer Advocate e Engenheiro de Soluções do Twitter na América Latina.
                 </span>
                 <ul class="social-links">
                   <li class="twitter">
@@ -770,7 +770,7 @@
         <div class="sponsors-wrapper">
           <h2 class="section-title">Quem faz acontecer</h2>
 
-          <div class="sponsor-category master-category">
+          <div class="sponsor-category category-oferecimento">
             <h2 class="title">Oferecimento</h2>
             <a href="">
               <img src="images/logo-id5.jpg" alt="">
