Fix break line - organizers-list

--- a/app/index.html
+++ b/app/index.html
@@ -870,7 +870,7 @@
 
           <li>
             <img src="images/organizer-ivan.jpg" alt="">
-            <span class="name">Ivan <br> Santos</span>
+            <span class="name">Ivan Santos</span>
             <span class="job">Front-end</span>
 
             <ul class="social-links">
